# Novastor_Probeaufgabe

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Novastor_Probeaufgabe_UT.cpp  README.md
Novastor_Probeaufgabe/: CMakeLists.txt  Novastor_Probeaufgabe.cpp
src/: CMakeLists.txt  Novastor_Probeaufgabe.cpp  Novastor_Probeaufgabe.h
src/collector/: Collector.cpp  Collector.h
src/model/: FileSystemEntry.h  FilesystemEntry.cpp  FilesystemEntry.h
src/worker/: LocalFileSystemWorker.cpp  LocalFileSystemWorker.h  LocalFilesystemWorker.cpp  LocalFilesystemWorker.h  WorkerBase.cpp  WorkerBase.h  WorkerThread.cpp  WorkerThread.h
src/workerPool/: WorkerPool.cpp  WorkerPool.h
test/: CMakeLists.txt  Collector_UT.cpp  LocalFilesystemWorker_UT.cpp  Novastor_Probeaufgabe_UT.cpp  Testdata.h.in  WorkerPool_UT.cpp
