# CMakeList.txt : CMake project for Novastor_Probeaufgabe, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (Novastor_Probeaufgabe "Novastor_Probeaufgabe.cpp" "Novastor_Probeaufgabe.h")

# TODO: Add tests and install targets if needed.
